# councilmatic

./: .gitignore  Change_notification_proj_outline.md  Councilmatic_change_notification_proj_outline.md  Makefile  README.md  ScraperUpdate.sh  ScraperUpdate2.sh  ScraperUpdate_AWS.sh  Scraper_Twitter-new.sh  Scraper_Twitter.sh  Scraper_full_json.sh  Scraper_year_json.sh  TweetIt.sh  Tweeter.py  cal01012019_01142019.json  cal03142019_03212019.json  cal04092019.json  commoncode.sh  councilmatic.conf.model  crontab_backup.txt  environment.yml  last_month.json  makescraperfiles.sh  makescraperfiles_current.sh  manage.py  meeting_item.json  notes.txt  pip-selfcheck.json  pyproject.toml  requirements.txt  resources.md  run_action_details.py  run_calendar.py  run_calendar_v2.py  run_councilmember.py  run_legislation_details.py  run_meeting_details.py  run_meeting_json.py  scraper  set_csv_scraper_symlink.sh  (+5 more)
Developer_aids/: GoogleDoc_for_mtg_element_work  Resource_links.md  dev_notes.md  example_compare_results_file.json  file_compare-console_output  file_structure_print  json_for_one_meeting.txt  legistar_json_file_compare.py  pull_data_from_legistar.py
WebPage/: .gitignore
councilmatic/: settings.py  settings_deployment.py~  settings_jurisdiction.py
oakland/: urls.py~
old/: Scraper_year_json.sh  admin.py  requirements.txt  run_action_details.py  run_calendar.py  run_calendar2.py  run_councilmember.py  run_legislation_details.py  run_meeting_details.py  set_json_scraper_symlink.sh
scraper/: legislation.py
scraper_csv/: appdynamicsjob.py  legislation.py
(+110 files in other folders)
