[tool.poetry]
name = "councilmatic"
version = "0.1.0"
description = "This application keeps the public informed about the ongoing Oakland City Council meetings."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
